--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
         </div>
 
         <section class="video-section">
-            <h2>Mein Imagefilm (In Arbeit)</h2>
+            <h2>Mein Trailer (In Arbeit)</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Zin Arbeit" title="In Arbeit." frameborder="0" allowfullscreen></iframe>
         </section>
         
