--- a/impressium.html
+++ b/impressium.html
@@ -20,4 +20,8 @@
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
+    <div>
+        <p>Thomas Baumberger</p>
+    </div>
+    </body>
 </html>
