--- a/impressium.html
+++ b/impressium.html
@@ -2,7 +2,11 @@
 <html lang="de">
     <head>
 
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Philipp Litwin</title>
+    <link rel="stylesheet" href="styles.css">
+    
         
     </head>
     <body>
