--- a/impressium.html
+++ b/impressium.html
@@ -25,7 +25,8 @@
         </ul>
     </nav>
     <div>
-        <p>Thomas Baumberger</p>
+                        <h1 class="animated-text">Thomas Baumberger</h1>
+
     </div>
     </body>
 </html>
