--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="projekte.html">Partner</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>    
-            <li><a href="impressium.html">Impressium</a></li>
+            <li><a href="test.html">Impressium</a></li>
 
         </ul>
     </nav>
