--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
     <header class="header">
         <div class="content">
             <div class="text-box">
-                <h1 class="animated-text">[Name]</h1>
+                <h1 class="animated-text">Thomas Baumberger</h1>
                 <h2>Dein Name</h2>
                 <p>Hier wird dein Name in verschiedenen Farben erscheinen!</p>
             </div>
