--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
 
     <footer>
         </div>
-        <p>©2024 MineLegends. Erstellt von Philipp Litwin</p>
+        <p>©2024 Franzikus MS-Wels. Erstellt von Philipp Litwin</p>
     </footer>
 
     <script src="script.js"></script>
