--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="alt_text_label_Instagram.png" alt="Instagram">
             </a>
         </div>
-        <p>©2024 MineLegends. Erstellt von Philipp Litwin</p>
+        <p>©2024 Franzikus MS-Wels Erstellt von Philipp Litwin</p>
     </footer>
 
     <script src="script.js"></script>
